* Align text left on section roots * Widens the size of section roots * Make the size of archive tables equal on all pages. * Fix the size of links in news * latest news on the index page

--- a/assets/ananke/css/archive.css
+++ b/assets/ananke/css/archive.css
@@ -14,7 +14,7 @@
     font-size: larger;
 }
 
-.link {
+.archive-link {
     width: 3em;
 }
 
@@ -31,4 +31,27 @@ a:focus, a:hover {
 
 li {
     text-align: left;
+}
+
+article, .center {
+    text-align: left;
+}
+
+article, .mw7 {
+    max-width: 64rem;
+}
+
+article, .nested-copy-line-height {
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 64rem;
+}
+
+article, .nested-copy-line-height > table {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+article, .measure-wide {
+    max-width: 64rem;
 }
